--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint src/*.mjs"
+    "lint": "eslint --fix src/*.mjs"
   },
   "repository": {
     "type": "git",
