--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/ishanpranav/server#readme",
   "devDependencies": {
-    "eslint": "^8.56.0",
-    "eslint-plugin-mocha": "^10.2.0"
+    "eslint": "^8.56.0"
+  },
+  "dependencies": {
+    "markdown-it": "^14.0.0"
   }
 }
